--- a/src/assets/css/sass/general/grid.scss
+++ b/src/assets/css/sass/general/grid.scss
@@ -45,11 +45,12 @@ body {
             width:100%;
             text-align: left;
             margin-right: 50px;
-            margin-bottom:25px;
+
             position: relative;
+            margin-bottom: 20%;
 
-            @media (max-width:680px) {
-
+            @media  screen and(max-width:700px) {
+                margin-bottom: 25px;
             }
             a:link, a:visited, a:hover, a:active  {
                 color:$mainBlack;
@@ -101,6 +102,7 @@ body {
             h4 {
                 @extend %thumbnail-title;
                 @extend %shrinking-text;
+
                 margin-top:10px;
                 margin-bottom:10px;
             }
@@ -137,6 +139,10 @@ body {
 
         .custom-grid-item {
             width: 25%;
+            @media screen and (max-width: 780px) {
+                background-color:red;
+                width:100%;
+             }
         }
 
         .custom-grid-item-small {
@@ -146,10 +152,15 @@ body {
             display: block;
             height:100px;
             background-color:$mainYellow;
+
             display: inline-block;
             position: relative;
             width: 10%;
-
+            @media screen and (max-width: 800px) {
+                height:  30px;
+                display: inline-block;
+                width: 100%;
+            }
             h4 {
                 text-align:center;
                 margin-top: 0px;
@@ -158,11 +169,6 @@ body {
                 left: 50%;
                 transform: translate(-50%, -50%);
 
-
-            }
-
-            @media screen and (max-width: 700px) {
-                
 
             }
 
