--- a/src/assets/css/sass/general/grid.scss
+++ b/src/assets/css/sass/general/grid.scss
@@ -16,8 +16,15 @@ body {
         @media screen and (max-width: 1190px) {
             margin-left:0px;
             margin-right:0px;
+
+        }
+
+        &.four-grid {
+            margin-left: -1%;
+            margin-right: -1%;
         }
         .cell  {
+
 
 
             width: 30%;
@@ -37,6 +44,14 @@ body {
                 width: 100%;
                 margin-right:0%;
                 margin-left:0%;
+
+            }
+
+
+            &.four-cell {
+                width:23%;
+                margin-right:1%;
+                margin-left:1%;
 
             }
         }
