--- a/src/assets/css/sass/site-parts/single-post.scss
+++ b/src/assets/css/sass/site-parts/single-post.scss
@@ -1,22 +1,29 @@
 
 #single-blog {
-    width:80%;        
+    width:80%;
     .post-header {
-        
+
         .blog-title {
-            margin-top:0px;
-            
+            margin-top:25px;
+
+
         }
-        img {
-            height:auto;
-            width: 350px;
-            display:inline-block;
+
+        .header-image-container {
+            text-align: center;
+            img {
+                height:auto;
+                width: 350px;
+                display:inline-block;
+
+            }
+
         }
-    
+
     }
     .post-body {
         p {
-            font-size:12px;            
+            font-size:12px;
         }
     }
 }
