--- a/src/assets/css/sass/site-parts/single-post.scss
+++ b/src/assets/css/sass/site-parts/single-post.scss
@@ -1,11 +1,16 @@
 
 #single-blog {
-    width:80%;
+
+    padding-top:80px;
+
+    .blog-container  {
+        width:800px;
+        margin:0 auto;
+    }
     .post-header {
 
         .blog-title {
             margin-top:25px;
-
 
         }
 
@@ -13,7 +18,7 @@
             text-align: center;
             img {
                 height:auto;
-                width: 350px;
+                width: 100%;
                 display:inline-block;
 
             }
