--- a/src/assets/css/sass/general/font.scss
+++ b/src/assets/css/sass/general/font.scss
@@ -31,11 +31,19 @@
     margin-top: 10px;
  }
 
+ .font-equation {
+     text-align: center;
+     text-transform: uppercase;
+     font-size: 21px;
+     margin-top: 10px;
+     margin-top: 0px;
+  }
+
 // Classes
 .title-font {
     text-align: left;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 48px;
     margin-top: 10px;
 }
 
