--- a/src/assets/css/sass/site-parts/footer.scss
+++ b/src/assets/css/sass/site-parts/footer.scss
@@ -3,7 +3,7 @@ footer {
     margin-top:50px;
     z-index:50000;
     width:100%;
-    height: 80px;
+    height: 50px;
     background-color:$mainYellow;
     bottom:0px;
     right: 0px;
@@ -12,7 +12,7 @@ footer {
     p,ul {margin:0;
          padding-left:0px;}
     .social-networks {
-        padding-top:15px;
+        padding-top:10px;
 
         i {
             i:first-child  {
@@ -25,7 +25,8 @@ footer {
     }
 
     .footer-text  {
-        padding-top:10px;
+        // padding-top:10px;
+        font-size: 12px;
 
     }
 }
