--- a/src/assets/css/sass/site-parts/home-page.scss
+++ b/src/assets/css/sass/site-parts/home-page.scss
@@ -1,26 +1,31 @@
 @import "../general/font.scss";
 @import "../general/colors.scss";
 @import "../core/layout-rules.scss";
-
+.video {
+    // max-height: 60vh;
+    height: 100%;
+    width: 90%;
+    max-width: 1000px;
+    @media screen and (max-width: 1100px) {
+        width:100%;
+    }
+}
 
 .landing-page-bloc {
     z-index:15;
     padding-top:90px;
-    height:100vh;
-    min-height: 790px;
+    // height:100vh;
+    // min-height: 790px;
     @media screen and (max-width: 500px) {
         min-height:450;
     }
-    .video {
-        @media screen and (max-width: 500px) {
-            width:100%;
-        }
-    }
+
 
 }
 
 .main-bloc {
     z-index:500;
+    padding-top: 10vh;
     &.home-page {
         height: 100vh;
         min-height:600px;
@@ -43,18 +48,25 @@
 }
 .video-container {
     text-align:center;
-
-
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position:relative;
+    @media screen and (max-width: 1100px) {
+        top: 0;
+        left: 0;
+        transform: translate(0, 0);
+    }
 }
 
 .main-page-video {
 
         width:100%;
-        margin-top:50px;
-        margin-bottom:50px;
-
-        position: relative;
-
+        height:100vh;
+        @media screen and (max-width: 1100px) {
+            height:auto;
+            padding-top: 100px;
+        }
 }
 .home-page-infos {
     margin-bottom:25px;
@@ -84,10 +96,6 @@ body {
         margin-left: 8.3333vw;
         margin-right: 8.3333vw;
         max-width:1600px;
-        @media screen and (max-width: 1200px) {
-
-
-        }
         video {
             &.main-page-video {
 
@@ -195,9 +203,6 @@ body {
             @media screen and (max-width: 800px) {
                 display: block;
             }
-            .animation {
-                margin-left: 0px;
-            }
         }
 
         .container-item {
@@ -215,8 +220,9 @@ body {
             display: inline-block;
             min-width: 190px;
             border: solid 6px $mainBlack;
+            box-sizing: border-box;
             position: relative;
-            margin-bottom:15px;
+            // margin-bottom:15px;
             @media screen and (max-width: 800px) {
                 width: 100%;
                 display: block;
