--- a/src/assets/css/sass/general/font.scss
+++ b/src/assets/css/sass/general/font.scss
@@ -1,26 +1,29 @@
 %main-font {
      font-family: "Arial";
      font-weight: 900;
+     background-color: #ffff00;
 }
 
 %thumbnail-title {
     text-align: left;
     text-transform: uppercase;
     font-size: 20px;
+    background-color: #ffff00;
 }
 
 
 %thumbnail-brief {
     text-align: left;
     font-size: 14px;
+    background-color: #ffff00;
 }
 
 // Classes
 .large-block-font {
     text-align: left;
     font-size: 28px;
-    margin-top: 10px;
     margin-bottom:0px;
+    background-color: #ffff00;
 }
 
 
@@ -29,14 +32,14 @@
     text-transform: uppercase;
     font-size: 21px;
     margin-top: 10px;
+    background-color: #ffff00;
  }
 
  .font-equation {
      text-align: center;
      text-transform: uppercase;
      font-size: 21px;
-     margin-top: 10px;
-     margin-top: 0px;
+     background-color: #ffff00;
   }
 
 // Classes
@@ -44,14 +47,13 @@
     text-align: left;
     text-transform: uppercase;
     font-size: 48px;
-    margin-top: 10px;
+    background-color: #ffff00;
 }
 
 .font-description {
     font-size: 16px;
-    margin-top: 10px;
-    margin-bottom:0px;
-    line-height:25px;
+    text-align: justify;
+    background-color: #ffff00;
 }
 
 
@@ -59,13 +61,16 @@
     font-size: 12px;
     margin-top: 10px;
     margin-bottom:0px;
+    background-color: #ffff00;
 }
 .super-large-single {
 
     font-size: 62px;
+    background-color: #ffff00;
 }
 %shrinking-text {
     font-size:20px;
+    background-color: #ffff00;
     @media screen and (max-width: 1550px) {
         font-size:16px;
     }
