--- a/src/assets/css/sass/site-parts/home-page.scss
+++ b/src/assets/css/sass/site-parts/home-page.scss
@@ -6,7 +6,7 @@
     height: 100%;
     width: 90%;
     max-width: 1000px;
-    @media screen and (max-width: 1100px) {
+    @media screen and (max-width: 1150px) {
         width:100%;
     }
 }
@@ -25,7 +25,7 @@
 
 .main-bloc {
     z-index:500;
-    padding-top: 10vh;
+    padding-bottom: 5vh;
     &.home-page {
         height: 100vh;
         min-height:600px;
@@ -52,7 +52,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     position:relative;
-    @media screen and (max-width: 1100px) {
+    @media screen and (max-width: 1150px) {
         top: 0;
         left: 0;
         transform: translate(0, 0);
@@ -63,7 +63,7 @@
 
         width:100%;
         height:100vh;
-        @media screen and (max-width: 1100px) {
+        @media screen and (max-width: 1150px) {
             height:auto;
             padding-top: 100px;
         }
@@ -95,6 +95,7 @@ body {
 
         margin-left: 8.3333vw;
         margin-right: 8.3333vw;
+        margin-bottom: 50px;
         max-width:1600px;
         video {
             &.main-page-video {
@@ -251,7 +252,7 @@ body {
 }
 #mission-homepage-container {
     padding-bottom:20px;
-    max-width:80%;
+    max-width:100%;
     margin-bottom:10px;
 }
 #projects-homepage-container {
